mxfdemux: Fix memory leak in error case

https://bugzilla.gnome.org/show_bug.cgi?id=788508